[project]
name = "hoocs"
version = "0.1.0"
description = "Occlusion-based explainers for higher-order attributions."
readme = "README.md"
authors = [{ name = "Stefan Bluecher", email = "bluecher@tu-berlin.de" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ['XAI', 'PredDiff', 'Shapley values', 'Interactions', 'Model-agnostic attributions']
dependencies = [
    'numpy>1.20',
    'scipy',
    'matplotlib',
    'opencv-python',
    'scikit-learn',
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
select = ["E", "F", "W", "D"] # pycodestyle(E,W), pyflakes (F), pydocstyle(D)

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/bluecher31/hoocs"
